# opencadd

./: .gitattributes  .gitignore  .lgtm.yml  .pylintrc  .travis.yml  Benchmark_Notebook.ipynb  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Paper.md  README.md  Test  Untitled.ipynb  environment.yml  mmligner_issue_56.txt  notebook_mmligner.ipynb  paper.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: bash_test.sh  ci.yaml  docs.yaml
devtools/: README.md
devtools/conda-envs/: requirements.txt  test_env.yaml  user_env.yaml
devtools/conda-recipes/: meta.yaml
devtools/scripts/: bash_test.sh  create_conda_env.py  initialize_conda.sh
docs/: 20201013_opencadd_new_features_slides.ipynb  Full_API.rst  Makefile  README.md  Tutorial.rst  api.rst  conf.py  databases_klifs.rst  databases_klifs_statement_of_need.rst  developers.rst  getting_started.rst  index.rst  installing.rst  installing_opencadd_klifs.rst  io.rst  make.bat  structure_pocket.rst  superposition.rst  tutorial.rst
docs-jb/: README.md  _config.yml  _toc.yml  conf.py
docs-jb/source/: conf.py  index.md  references.bib
docs/autosummary/: structuralalignment.core.rst  structuralalignment.superposition.matchmaker.rst  structuralalignment.superposition.mmligner.rst  structuralalignment.superposition.rst  structuralalignment.superposition.theseus.rst
docs/notebooks/: README.md  explore_anchor_residues.ipynb  klifs_kinase_names.ipynb
docs/other/: 20201013_opencadd_new_features_slides.ipynb  klifs_kinase_names.ipynb
docs/reference/: structuralalignment.api.align.rst  structuralalignment.api.rst  structuralalignment.cli.greeting.rst  structuralalignment.cli.main.rst  structuralalignment.cli.parse_cli.rst  structuralalignment.cli.parse_method_options.rst  structuralalignment.cli.rst  structuralalignment.core.Sequence.rst  structuralalignment.core.Structure.rst  structuralalignment.core.rst  structuralalignment.report.rst  structuralalignment.rst  structuralalignment.sequences.get_alignment_fasta.rst  structuralalignment.sequences.matrices.rst  structuralalignment.sequences.needleman_wunsch.rst  structuralalignment.sequences.rst  structuralalignment.sequences.smith_waterman.rst  structuralalignment.superposition.base.BaseAligner.calculate.rst  structuralalignment.superposition.base.BaseAligner.compute_sequence_alignment.rst  structuralalignment.superposition.base.BaseAligner.compute_structural_overlap.rst  structuralalignment.superposition.base.BaseAligner.rst  structuralalignment.superposition.base.rst  structuralalignment.superposition.matchmaker.MatchMakerAligner.calculate.rst  structuralalignment.superposition.matchmaker.MatchMakerAligner.compute_sequence_alignment.rst  structuralalignment.superposition.matchmaker.MatchMakerAligner.compute_structural_overlap.rst  structuralalignment.superposition.matchmaker.MatchMakerAligner.rst  structuralalignment.superposition.matchmaker.rst  structuralalignment.superposition.mmligner.MMLignerAligner.calculate.rst  structuralalignment.superposition.mmligner.MMLignerAligner.compute_sequence_alignment.rst  structuralalignment.superposition.mmligner.MMLignerAligner.compute_structural_overlap.rst  structuralalignment.superposition.mmligner.MMLignerAligner.ivalue.rst  structuralalignment.superposition.mmligner.MMLignerAligner.rst  structuralalignment.superposition.mmligner.rst  structuralalignment.superposition.rst  structuralalignment.superposition.theseus.TheseusAligner.calculate.rst  structuralalignment.superposition.theseus.TheseusAligner.rst  (+5 more)
docs_/source/: conf.py  (+1 more)
opencadd/: __init__.py  _common_webapi.py  _decorator.py  _df_tools.py  _exceptions.py  _general_exceptions.py  _helpers_sysio.py  _http_request.py  _profiler.py  _regex.py  _sysio.py  _typing.py  _version.py  api.py  cli.py  decorators.py  protein.py  typing.py  utils.py
paper/: paper.bib  paper.md
structuralalignment/: __init__.py  _version.py  api.py  cli.py  core.py  report.py  sequences.py  structuralalignment.py  utils.py
superposer/: __init__.py  _version.py  api.py  cli.py  core.py  report.py  sequences.py  utils.py
tests/: test_opencadd.py
(+468 files in other folders)
